# rak5010_sms_gpio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  STATI_IMPIANTO.md  app.overlay  prj.conf  west.yml
src/: auth.c  auth.h  gpio_ctrl.c  gpio_ctrl.h  main.c  modem.c  modem.h  plant_status.c  plant_status.h  sequence.c  sequence.h  sms.c  sms.h  sms_replies.h  tech_config.h.example  wdt.c  wdt.h
